Fixed include fonts & changed main site fonts

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,7 @@
+@import url('http://fonts.cdnfonts.com/css/share-tech-mono');
+@import url('http://fonts.cdnfonts.com/css/kia-light');
+
 * {
   margin: 0px;
   padding: 0px;
-}
-
-@font-face {
-  font-family: 'NIKEA';
-  src: local('NIKEA'), url(../fonts/NIKEA.otf) format('otf');
-}
-
-@font-face {
-  font-family: 'Fairwall Sans';
-  src: local('Fairwall Sans'), url(../fonts/FairwallSans-Regular.otf) format('otf');
 }
