fixed mixed content

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('http://fonts.cdnfonts.com/css/share-tech-mono');
-@import url('http://fonts.cdnfonts.com/css/kia-light');
+@import url('https://fonts.googleapis.com/css2?family=Syncopate&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@700&display=swap');
 
 * {
   margin: 0px;
