--- a/src/App.css
+++ b/src/App.css
@@ -128,3 +128,25 @@ button {
   outline: none !important;
 }
 
+@media (min-width: 360px) and (min-height:660px) {
+  .createConfigTitle {
+    position: relative;
+    top: 80px !important;
+  }
+  .configName,.buttonDelete,.configValue {
+    position: relative;
+    top:-100px;
+  }
+}
+
+@media (width: 320px) and (height:568px) {
+  .createConfigTitle {
+    position: relative;
+    top: 90px !important;
+  }
+  .configName,.buttonDelete,.configValue {
+    position: relative;
+    top:-100px;
+    padding: 15px 30px;
+  }
+}
